[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "html2latex"
version = "0.0.63"
description = "Convert HTML to LaTeX"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Pankaj Singh", email = "pankaj28843@gmail.com" }
]
keywords = ["html", "latex", "converter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Utilities",
]

dependencies = [
  "Jinja2>=3.1.6",
  "html2text>=2025.4.15",
  "justhtml>=0.20.0",
  "pydantic>=2.10.0",
]

[project.optional-dependencies]
spellcheck = [
  "pyenchant>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/pankaj28843/html2latex"
Issues = "https://github.com/pankaj28843/html2latex/issues"

[dependency-groups]
# Development helpers
# NOTE: versions will be pinned via uv.lock
# NOTE: demo app deps are in demo group

dev = [
  "ipdb>=0.13.13",
  "ipython>=8.0",
]

test = [
  "pytest>=9.0.2",
  "pytest-cov>=6.0.0",
]

lint = [
  "ruff>=0.14.11",
]

demo = [
  "Flask>=3.1.2",
  "redis>=7.1.0",
]

e2e = [
  "playwright>=1.51.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["html2latex.tests*"]

[tool.setuptools.package-data]
html2latex = ["templates/*.tex", "templates/*.html", "templates/Readme"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["demo-app"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
omit = [
  "src/html2latex/elements.py",
  "src/html2latex/helpers.py",
  "src/html2latex/pipeline.py",
  "src/html2latex/setup_texenv.py",
  "src/html2latex/template_env.py",
]
