[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "html2latex"
version = "0.0.63"
description = "Convert HTML to LaTeX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Pankaj Kumar Singh", email = "pankaj28843@gmail.com" }
]
keywords = ["html", "latex", "converter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Utilities",
  "Typing :: Typed",
]

dependencies = [
  "Jinja2>=3.1.6",
  "justhtml>=0.20.0",
  "pydantic>=2.10.0",
]

[project.urls]
Homepage = "https://github.com/pankaj28843/html2latex"
Issues = "https://github.com/pankaj28843/html2latex/issues"

[dependency-groups]
# Development helpers
# NOTE: versions will be pinned via uv.lock
# NOTE: demo app deps are in demo group

dev = [
  "ipdb>=0.13.13",
  "ipython>=8.0",
]

test = [
  "pytest>=9.0.2",
  "pytest-cov>=6.0.0",
]

lint = [
  "ruff>=0.14.11",
]

e2e = [
  "playwright>=1.51.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["html2latex.tests*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
markers = [
    "unit: Fast, isolated unit tests",
    "integration: Tests that integrate multiple components",
    "e2e: End-to-end tests requiring external services (browser, LaTeX)",
    "slow: Tests that take significant time to run",
]
# Strict mode settings
filterwarnings = ["error"]
xfail_strict = true
strict_markers = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E4", "E7", "E9",  # pycodestyle errors
    "F",               # pyflakes
    "I",               # isort
    "UP",              # pyupgrade
    "B",               # flake8-bugbear
    "SIM",             # flake8-simplify
    "C90",             # mccabe complexity
    "A",               # flake8-builtins
    "COM",             # flake8-commas
    "PTH",             # flake8-use-pathlib
    "RUF",             # ruff-specific rules
    "PL",              # pylint subset
    "TRY",             # tryceratops - exception handling
    "PERF",            # perflint - performance
    "FURB",            # refurb - modernization
    "S",               # flake8-bandit - security
    "PT",              # flake8-pytest-style
    "D",               # pydocstyle - docstring enforcement
    "TCH",             # flake8-type-checking - optimize imports
    # v5: Additional code quality rules
    "C4",              # flake8-comprehensions - efficient comprehensions
    "T10",             # flake8-debugger - no debugger statements
    "T20",             # flake8-print - no print statements
    "RET",             # flake8-return - return statement consistency
    "PIE",             # flake8-pie - misc lints
    "RSE",             # flake8-raise - raise statement best practices
    "EM",              # flake8-errmsg - exception message best practices
    "FLY",             # flynt - use f-strings
    "LOG",             # flake8-logging - logging best practices
    "G",               # flake8-logging-format - logging format strings
    "BLE",             # flake8-blind-except - no blind except
    "N",               # pep8-naming - naming conventions
    # v7: Additional safety rules
    "ISC",             # flake8-implicit-str-concat - catch accidental string concat
    "SLF",             # flake8-self - no private member access from outside
    "ARG",             # flake8-unused-arguments - catch unused parameters
    "ERA",             # eradicate - find commented-out code
    "DTZ",             # flake8-datetimez - enforce timezone-aware datetime
]
ignore = [
    "E501",            # line too long (handled by formatter)
    "COM812",          # trailing comma (conflicts with formatter)
    "PLR0913",         # too many arguments (sometimes necessary)
    "PLR2004",         # magic value comparison (too noisy)
    "TRY003",          # long exception messages (acceptable)
    "D100",            # module docstrings (too verbose for internal modules)
    "D104",            # package docstrings (too verbose)
    "D105",            # magic method docstrings (self-documenting)
    "D107",            # __init__ docstrings (class docstring is sufficient)
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",        # no docstrings required in tests
    "PLR2004",  # magic values in tests are fine
    "S101",     # assert in tests is expected
    "PLR0915",  # too many statements in tests is acceptable
    "PLC0415",  # imports not at top of file (for pytest.importorskip patterns)
    "PERF203",  # try-except in loops for waiting
    "S105",     # false positive on variable named "token"
    "S106",     # false positive on variable named "password" in test data
    "S108",     # /tmp usage in tests is fine
    "S311",     # random in tests is fine (not crypto)
    "S603",     # subprocess with controlled input in tests
    "S607",     # partial executable path in tests
    # v5: Additional ignores for test patterns
    "EM",       # exception message formatting less critical in tests
    "BLE001",   # blind except acceptable in test utilities (e.g., waiting for server)
    "RET504",   # unnecessary assignment before return - clarity over brevity in tests
    # v7: pytest hooks must match expected signature
    "ARG001",   # pytest hooks have fixed signatures (e.g., config param)
]
"benchmarks/**/*.py" = [
    "D",        # no docstrings required in benchmarks
    "T201",     # print is fine in benchmarks
]
"tests/e2e/**/*.py" = [
    "S310",     # URL open in e2e tests uses localhost URLs
]
# The conversion pipeline is inherently complex due to HTML tag handling
"src/html2latex/pipeline/convert.py" = [
    "C901",     # complexity - refactoring would fragment the logic
    "PLR0911",  # many returns - needed for tag dispatch
    "PLR0912",  # many branches - needed for tag dispatch
    "PLR0915",  # many statements - needed for complete conversion
]
"src/html2latex/pipeline/normalize.py" = [
    "C901",     # complexity - whitespace normalization is inherently complex
]
# Serializer methods accept siblings/index for context - extensibility pattern
"src/html2latex/latex/serialize.py" = [
    "ARG002",   # siblings/index passed for context (subclass may use)
]
# Flask error handlers must accept error parameter (framework callback)
"demo-app/app.py" = [
    "ARG001",   # Flask error handlers require error param even if unused
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # assert is fine in non-test code for invariant checks

[tool.uv.workspace]
members = ["demo-app"]
